--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: PiLi_Note
 subtitle: "Note"
-description: "先问是不是，再问为什么"
+description: "小前端 | 小笔记"
 keywords:
 author: 赖霹雳
 language: zh-CN
